syntax = "proto3";


option java_package = "com.lrbj.grpc.lib";
//数量不一致
//option java_multiple_files = true;
//package com.lrbj.grpclib.greeter;
// The greeting service definition.
service Greeter{
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc RecordRoute(stream Point) returns (RouteSummary) {}
}

message Point {
  int32 age = 1;
}
message RouteSummary {
  int32 num = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
